# libsignal-client

java/java/src/main/java/org/signal/internal/: Native.java
java/java/src/main/java/org/whispersystems/libsignal/groups/: GroupSessionBuilder.java  SenderKeyName.java
node/: index.ts  libsignal_client.d.ts
node/test/: PublicAPITest.ts
rust/bridge/ffi/src/: util.rs
rust/bridge/shared/src/: protocol.rs
rust/bridge/shared/src/jni/: mod.rs  storage.rs
rust/core/: Cargo.toml
rust/core/src/: address.rs  lib.rs
rust/net/src/: lib.rs
rust/protocol/: Cargo.toml
rust/protocol/src/: address.rs  crypto.rs  lib.rs  protocol.rs  sender_keys.rs
rust/protocol/src/state/: prekey.rs  signed_prekey.rs
swift/Sources/SignalClient/: SenderKeyName.swift
swift/Sources/SignalClient/messages/: SenderKeyDistributionMessage.swift
swift/Sources/SignalFfi/: signal_ffi.h
swift/Tests/SignalClientTests/: PublicAPITests.swift
