#
# Copyright (C) 2020-2022 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
authors = ["Signal Messenger LLC"]
edition = "2021"
license = "AGPL-3.0-only"
name = "libsignal-protocol"
version = "0.1.0"

[dependencies]
aes = {version = "0.8.3", features = ["zeroize"]}
aes-gcm-siv = "0.11.1"
arrayref = "0.3.6"
async-trait = "0.1.41"
ctr = {version = "0.9.2", features = ["zeroize"]}
curve25519-dalek = {version = "4.0.0", features = ["digest"]}
displaydoc = "0.2"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
indexmap = "1.9.3"
itertools = "0.10.5"
log = "0.4"
num_enum = "0.6.1"
pqcrypto-kyber = {version = "0.7.6", default-features = false, features = ["std"]}
pqcrypto-ml-kem = {version = "0.8.0", default-features = false, features = ["std"], package = "pqcrypto-kyber"}
pqcrypto-traits = "0.3.4"
prost = "0.12"
rand = "0.8"
serde = {version = "1.0.147", optional = true}
sha2 = "0.10"
signal-crypto = {path = "../crypto"}
static_assertions = "1.1"
subtle = "2.3"
thiserror = "1.0.30"
typenum = "1.12.0"
uuid = {version = "1.1.2", features = ["serde"]}
x25519-dalek = {version = "2.0.0", features = ["static_secrets"]}

[features]
kyber768 = []
# ML-KEM matches the NIST standard version of Kyber. It may still change
# incompatibly until the final version of the standard is published and
# libsignal will update to match.
mlkem1024 = []

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10.0"
futures-util = "0.3.7"
hex-literal = "0.4.1"
proptest = "1.0"

[build-dependencies]
prost-build = "0.12"

[[bench]]
harness = false
name = "curve"

[[bench]]
name = "session"

[[bench]]
harness = false
name = "ratchet"

[[bench]]
harness = false
name = "sealed_sender"

[[bench]]
harness = false
name = "kem"
required-features = ["kyber768"]
